fixed hover on tablet viewport for dispenser image

--- a/src/styles.css
+++ b/src/styles.css
@@ -827,7 +827,7 @@ app-slider .swiper-slide {
     }
     .dispenser-container:hover img {
         transition: transform 0.3s ease;
-        transform: translateX(40px);
+        transform: translateX(60px);
     }
   }
   @media screen and (min-width:992px) and (max-width:1024px) {
